@@ -37,9 +37,9 @@ import static io.parsingdata.metal.util.EnvironmentFactory.env;
 import static io.parsingdata.metal.util.TokenDefinitions.any;
 
 import java.util.ArrayDeque;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Deque;
+import java.util.List;
 import java.util.Optional;
 
 import org.junit.Test;
@@ -160,10 +160,10 @@ public class CallbackTest {
 
     @Test
     public void genericCallback() {
-        final Deque<Token> expectedSuccessDefinitions = new ArrayDeque<>(Arrays.asList(DEF_ONE, POST_ONE, DEF_TWO, POST_TWO, DEF_THREE, DEF_ONE, POST_ONE, DEF_TWO, POST_TWO, DEF_FOUR, POST_FOUR, SEQ124, CHOICE));
-        final Deque<Long> expectedSuccessOffsets = new ArrayDeque<>(Arrays.asList(1L, 1L, 2L, 2L, 3L, 1L, 1L, 2L, 2L, 3L, 3L, 3L, 3L));
-        final Deque<Token> expectedFailureDefinitions = new ArrayDeque<>(Arrays.asList(POST_THREE, SEQ123));
-        final Deque<Long> expectedFailureOffsets = new ArrayDeque<>(Arrays.asList(2L, 0L));
+        final Deque<Token> expectedSuccessDefinitions = new ArrayDeque<>(List.of(DEF_ONE, POST_ONE, DEF_TWO, POST_TWO, DEF_THREE, DEF_ONE, POST_ONE, DEF_TWO, POST_TWO, DEF_FOUR, POST_FOUR, SEQ124, CHOICE));
+        final Deque<Long> expectedSuccessOffsets = new ArrayDeque<>(List.of(1L, 1L, 2L, 2L, 3L, 1L, 1L, 2L, 2L, 3L, 3L, 3L, 3L));
+        final Deque<Token> expectedFailureDefinitions = new ArrayDeque<>(List.of(POST_THREE, SEQ123));
+        final Deque<Long> expectedFailureOffsets = new ArrayDeque<>(List.of(2L, 0L));
         final OffsetDefinitionCallback genericCallback = new OffsetDefinitionCallback(
             expectedSuccessOffsets,
             expectedSuccessDefinitions,
@@ -183,8 +183,8 @@ public class CallbackTest {
 
         final Token cho = cho(POST_ONE, POST_TWO);
 
-        final Deque<Token> expectedSuccessDefinitions = new ArrayDeque<>(Arrays.asList(DEF_ONE, DEF_TWO, POST_TWO, cho));
-        final Deque<Long> expectedSuccessOffsets = new ArrayDeque<>(Arrays.asList(1L, 1L, 1L, 1L));
+        final Deque<Token> expectedSuccessDefinitions = new ArrayDeque<>(List.of(DEF_ONE, DEF_TWO, POST_TWO, cho));
+        final Deque<Long> expectedSuccessOffsets = new ArrayDeque<>(List.of(1L, 1L, 1L, 1L));
         final Deque<Token> expectedFailureDefinitions = new ArrayDeque<>(Collections.singletonList(POST_ONE));
         final Deque<Long> expectedFailureOffsets = new ArrayDeque<>(Collections.singletonList(0L));
         final OffsetDefinitionCallback genericCallback = new OffsetDefinitionCallback(
