@@ -23,6 +23,7 @@ import java.io.IOException;
 import java.net.URISyntaxException;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.runners.Parameterized;
 
@@ -33,7 +34,7 @@ public class FormatTest extends ParameterizedParse {
 
     @Parameterized.Parameters(name="{0} ({4})")
     public static Collection<Object[]> data() throws URISyntaxException, IOException {
-        return Arrays.asList(new Object[][] {
+        return List.of(new Object[][] {
             { "PNG", PNG.FORMAT, parseState("/test.png"), enc(), true },
             { "ZIP", ZIP.FORMAT, parseState("/singlefile-zip30-ubuntu.zip"), enc(), true },
             { "ZIP2", ZIP.FORMAT, parseState("/multifile-zip30-ubuntu.zip"), enc(), true },
